assets/sass/fractal6.scss
/* ... */
.is-wrapped {
    max-width: 100%;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
}

.nowrap {
    white-space: nowrap;
}

.divider {
    opacity: 0.24;
    &:hover {
        opacity: 1;
        transition: opacity 0.1s;
        cursor: pointer;
    }

    &.is-small::after,
    &.is-small::before {
        width: 2px;
    }

    &.is-vertical {
        margin-top: 0px !important;
        @include touch {
            margin-left: -10px;
            margin-right: -10px;
        }
        @include desktop {
            margin-left: 0px;
            margin-right: 0px;
        }
    }
}


.Circle {
    //padding-top: 4px;
    &::before {
        content: ' \25CF'; // draw a circle (use as tag/bullet)
        font-size: 17px;
    }
}

.circleBase {
    border: 1px solid #000;
    border-radius: 50%;
    color: white !important;
    text-align: center;
}

.circleBaseInline {
    //background: #2e3641;
    border: 1px solid #000;
    border-radius: 50%;
    color: white !important;
    text-align: center;
    display: inline-block !important;
}

.circle00 {
    background: #00000052;
    width: 28px;
    height: 28px;
    padding-top: 8px;
    font-size: 0.8rem;
}

.circle0 {
    background: #00000052;
    width: 38px;
    height: 38px;
    padding-top: 10px;
    font-size: 0.8rem;
}

.circle01 {
    width: 40px;
    height: 40px;
    text-align: center;
    padding-top: 10px;
    font-size: 0.85rem;
}

.circle1 {
    background: #00000052;
    width: 45px;
    height: 45px;
    text-align: center;
    padding-top: 12px;
    font-size: 0.9rem;
}

.circle2 {
    width: 55px;
    height: 55px;
    padding-top: 14px;
}

.circle3 {
    background: #00000052;
    width: 200px;
    height: 200px;
    padding-top: 50px;
    font-size: 4rem;
}

.is-orga {
    background: #285a86;
}

/*
 * CSS arrow please
 */

.has-arrow-left:after, .has-arrow-left:before {
    right: 100%;
    top: 50%;
    border: solid transparent;
    content: " ";
    height: 0;
    width: 0;
    position: absolute;
    pointer-events: none;
}
.has-arrow-left:after {
    border-right-color: var(--comment-header-background-color) !important;
    border-width: 8px;
    margin-top: -8px;
}
.has-arrow-left:before {
    border-right-color: var(--border-color-light);
    border-width: 9px;
    margin-top: -9px;
}

/*
 * Slider
 */

.slider {
  transition: transform .5s ease, opacity .5s ease;
  &.is-slide-left {
      transform: translateX(-100%);
      -webkit-transform: translateX(-100%);
      //opacity: 0;
  }
  &.is-slide-right {
      transform: translateX(100%);
      -webkit-transform: translateX(100%);
      //opacity: 0;
  }
}

/*
 *
 * Loading  Spinner
 *
 */

.spinner {
    // The height here is just for demo purposes
    height: 25vh;
    opacity: 1;
    position: relative;
    transition: opacity linear 0.1s;
	&::before {
		animation: 1.3s linear infinite spinner;
		border: solid 3px #eee;
		border-bottom-color: #6588EF;
		border-radius: 50%;
		content: "";
		height: 40px;
		left: 50%;
		opacity: inherit;
		position: absolute;
		top: 50%;
		transform: translate3d(-50%, -50%, 0);
		transform-origin: center;
		width: 40px;
		will-change: transform;
	}
    &.is-small::before {
        height: 20px !important;
        width: 20px !important;
    }
}

.spinner2 { // @todo fix
    // The height here is just for demo purposes
    //height: 25vh;
    opacity: 1;
    position: relative;
    transition: opacity linear 0.1s;
	&::before {
		animation: 1.3s linear infinite spinner;
		border: solid 3px #eee;
		border-bottom-color: #6588EF;
		border-radius: 50%;
		content: "";
		height: 40px;
		left: 0%;
		opacity: inherit;
		position: absolute;
		//top: 50%;
		transform: translate3d(-50%, -50%, 0);
		transform-origin: center;
		width: 40px;
		will-change: transform;
	}
    &.is-small::before {
        height: 20px !important;
        width: 20px !important;
    }
}

@keyframes spinner {
    0% {
        transform: translate3d(-50%, -50%, 0) rotate(0deg);
    }
    100% {
        transform: translate3d(-50%, -50%, 0) rotate(360deg);
    }
}


/*
 *
 * Placeholder Loading
 *
 */

.is-lazy {
    opacity: 0.6;
}

@keyframes placeHolderLine{
    0%{
        background-position: -460px 0
    }
    100%{
        background-position: 460px 0
    }
}
.ph-line {
    animation-duration: 2s;
    animation-fill-mode: forwards;
    animation-iteration-count: infinite;
    animation-name: placeHolderLine;
    animation-timing-function: linear;
    //background: linear-gradient(to right, #444444 8%, #555555 18%, #444444 33%);
    background: linear-gradient(to right, var(--background-evidence) 0%, var(--ph-background) 10%, var(--background-evidence) 100%);
    display: inline-block;
    height: 1.5rem;
    overflow: hidden;
	border-radius: 20px;
    position: relative;
    top: 5px;
    width: 100px;

    &.is-0 {
        width: 225px;
    }
    &.is-1 {
        width: 460px;
    }
}

.ph-circle {
    animation-duration: 2s;
    animation-fill-mode: forwards;
    animation-iteration-count: infinite;
    animation-name: placeHolderLine;
    animation-timing-function: linear;
    //background: linear-gradient(to right, #444444 8%, #555555 18%, #444444 33%);
    background: linear-gradient(to right, var(--background-evidence) 0%, var(--ph-background) 10%, var(--background-evidence) 100%);
}

@keyframes placeHolderButton{
    0%{
        background-position: -120px 0
    }
    100%{
        background-position: 120px 0
    }
}
.ph-button-1 {
    animation-duration: 2s;
    animation-fill-mode: forwards;
    animation-iteration-count: infinite;
    animation-name: placeHolderButton;
    animation-timing-function: linear;
    background: linear-gradient(to right, var(--background-evidence) 0%, var(--ph-background) 10%, var(--background-evidence) 100%);
    display: inline-block;
    height: 2.2rem;
    overflow: hidden;
	border-radius: 5px;
    width: 120px;
    position: relative;
    top: 5px;
}
/* ... */

